--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.design.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
@@ -9,4 +9,55 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.v7.widget.Toolbar
+            android:id="@+id/tb_home"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/header_height"
+            android:background="@color/app_main"
+            app:layout_behavior="cn.hujw.kactionapp.fragments.bottom.TranslucentBehavior">
+
+        <android.support.v7.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+            <com.joanzapata.iconify.widget.IconTextView
+                    android:id="@+id/icon_index_scan"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="left"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:paddingRight="10dp"
+                    android:text="{fa-qrcode}"
+                    android:textColor="@android:color/white"
+                    android:textSize="25sp"/>
+
+            <android.support.v7.widget.AppCompatEditText
+                    android:id="@+id/et_search_view"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="4"
+                    android:background="@android:color/white"
+                    android:gravity="center_vertical"
+                    android:hint="搜索"
+                    android:paddingLeft="20dp"/>
+
+            <com.joanzapata.iconify.widget.IconTextView
+                    android:id="@+id/icon_index_message"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="right"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:paddingLeft="10dp"
+                    android:text="{fa-bullhorn}"
+                    android:textColor="@android:color/white"
+                    android:textSize="25sp"/>
+
+        </android.support.v7.widget.LinearLayoutCompat>
+
+    </android.support.v7.widget.Toolbar>
+
+</android.support.design.widget.CoordinatorLayout>
